[gd_scene load_steps=5 format=3 uid="uid://end_game_screen"]

[ext_resource type="Script" path="res://scripts/end_game_screen.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bacrsre887cg7" path="res://sprites/background.webp" id="2_background"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"fade_in": SubResource("Animation_fade_in")
}

[node name="EndGameScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = -7.0
offset_top = -15.0
offset_right = 1015.0
offset_bottom = 593.0
texture = ExtResource("2_background")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -205.0
offset_right = 275.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Final Stats:"
horizontal_alignment = 1

[node name="GravesLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Graves Created: 0"
horizontal_alignment = 1

[node name="LivesUsedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}

[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
